--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 <p>This is the first paragraph</p>
 <body>
+    <main>
+  
     <p>first</p>
+
+    </main>
 </body>
+
+<footer> link to github </footer>
+
+
 </html>
