--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 
 <main>
-    <img src="Personal photo3.jpeg"width="200" height="200">
+    <div class="top_info"></div>
+    <img src="IMG_4018.jpeg"width="400" height="500">
 
     <h1>Jon W Rudicil  </h1>
 
@@ -58,7 +59,7 @@
         <li></li>
         <li></li>
         <li></li>
-        
+
     </ul>
 
 
