changing photo of Italy
changed photo of Italy and added and resized the arrow

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 
 
 <main>
-    <div class="top_info"></div>
-    <img src="IMG_4018.jpeg"width="400" height="500">
-
+    <div class="top_info">
+    <img src="IMG_4018.jpeg"width="400" height="440">
+    <img src="USA-Map-Blank.png"width="400" height="300">
+    <img src="arrow _580b57fcd9996e24bc43c43c.png"width="400" height="300">
+    <img src="Italy_depositphotos_103780522-stock-illustration-italy-and-sicily-map-vector.jpeg"width="400" height="300">
+</div>
     <h1>Jon W Rudicil  </h1>
 
     <h2>jonrudicil@yahoo.com</h2>
 
-
+</div>
 
 
     <p class="bio">I am an American most recently living in Seattle where I worked in State and      Local  Government as well as the NonProfit world.
