--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
     </p>
 
-    <p>I have a wide range of work experince ranging from non-profit to business and government. <br>
+    <p>I have a wide range of work experince from non-profit to business and government. <br>
         I have attached a link to my<span class="resume"> <a>resume</a></span> for your review.
     
     </p>
