--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </p>
 
     <p>I have a wide range of work experience from non-profit to business and government. <br>
-        I have attached a link to my<span class="resume"> <a>resume</a></span> for your review.
+        I have attached a link to my resume here
     
     </p>
 
