--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <main>
     <div class="top_info">
-    <img class="img1"src="IMG_4018.jpeg"width="400" height="440">
+   <a herf="https://www.#.com"><img class="img1"src="IMG_4018.jpeg"width="400" height="440"></a>
     <img class="img2"src="USA-Map-Blank.png"width="400" height="300">
     <img class="img3"src="arrow _580b57fcd9996e24bc43c43c.png"width="400" height="300">
     <img class="img4"src="Italy_depositphotos_103780522-stock-illustration-italy-and-sicily-map-vector.jpeg"width="400" height="300">
@@ -45,7 +45,13 @@
     </p>
 
     <p>I have a wide range of work experience from non-profit to business and government. <br>
-        I have attached a link to my resume here
+        I have attached a link to my Github, LinkIn below as well as at the bottom of the page.
+        <br>
+        <a herf="https://github.com">Github</a>
+        <br>
+        l<a herf="https://www.linkedin.com/feed/">linkedin</a>
+        <br>
+        
     
     </p>
 
