--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 </main>
 
 
-<footer> Copyright: Jon W Rudicil
+<footer id="footer"> Copyright: Jon W Rudicil
 <br>
 <br>
-    <img src="GitHub-Mark-32px.png"width="50" height="50" alt="github_logo">
-    <img src="linkin_174857.png"width="50" height="50" alt="github_logo">
+<a herf="https://github.com"><img src="GitHub-Mark-32px.png"width="50" height="50" alt="github_logo"></a>
+<a herf="https://www.linkedin.com/feed/"><img src="linkin_174857.png"width="50" height="50" alt="github_logo"></a>
 
 </footer>
 </body>
