--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@ function googleTranslateElementInit() {
 
 <footer id="footer"> Copyright: Jon W Rudicil
 
-<br>
+
+<div class="icon">
 <a href="https://github.com"><img src="GitHub-Mark-32px.png"width="50" height="50" alt="github_logo"></a>
+
 <a href="https://www.linkedin.com/feed/"><img src="linkin_174857.png"width="50" height="50" alt="github_logo"></a>
 
-
+</div>
 
 
 </footer>
