--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+
+
     <title>Introduction to Jon</title>
 </head>
 <body>
@@ -62,11 +74,11 @@ function googleTranslateElementInit() {
         
     </p>
 
-    <p>I have a wide range of work experience from non-profit to business and government. <br>
+    <p class="pro">I have a wide range of work experience from non-profit to business and government. <br>
         I have attached a link to my Github, LinkIn below as well as at the bottom of the page.
         <br>
           
-     <ul>
+     <ul class="link">
         <a href="https://github.com">Github</a>
         <br>
         l<a href="https://www.linkedin.com/feed/">linkedin</a>
