added instagram icon

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ function googleTranslateElementInit() {
 
 <a href="https://www.linkedin.com/feed/"><img src="linkin_174857.png"width="50" height="50" alt="github_logo"></a>
 
-<a href="https://www.instagram.com"><img src=""></a>
+
+<a href="https://www.instagram.com/midwestjon/"><img src="instagram.png"width="50"height="50" alt="instagram_logo"></a>
 
 </div>
 
